# imgoptim

./: CHANGELOG.md  Cargo.toml  Help.txt  README.md  specs.txt
.github/: RELEASE_TEMPLATE.md
scripts/: release_checks.ps1  sync_with_main.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/formats/: convert.rs  detect.rs  jpeg.rs  jxl.rs  metadata.rs  mod.rs  png.rs  resize.rs  tiff.rs  webp.rs  xmp.rs
src/io/: atomic_write.rs  fsmeta.rs  mod.rs
src/rules/: color.rs  decision.rs  mod.rs  naming.rs  normalize.rs  resize.rs  size.rs  threshold.rs
tests/: cli_convert.rs  cli_filters_naming.rs  cli_help.rs  cli_misc.rs  cli_output.rs  cli_resize_size.rs  color_parse.rs  common.rs  metadata_replace.rs  png_inject_dedupe.rs  resize_math.rs  resize_parse.rs  size_parse.rs  size_target_bytes.rs  threshold.rs
tests/Common/: mod.rs
tests/assets/: README.md
