[package]
name = "imgoptim"
version = "0.1.0"
edition = "2021"

[features]
default = ["png", "jpeg", "tiff", "jxl"]
png = ["dep:oxipng", "dep:png"]
jpeg = ["dep:jpeg-encoder", "dep:zune-jpeg", "dep:zune-core"]
webp = ["dep:image", "image/webp"]
tiff = ["dep:image", "image/tiff"]
jxl = ["dep:jxl-oxide"]

[dependencies]
anyhow = "1"
thiserror = "2.0.17"
clap = { version = "4.5.54", features = ["derive", "wrap_help"] }
walkdir = "2"
path-clean = "1.0"
filetime = "0.2"
tempfile = "3.24.0"
bytesize = "2.3.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
once_cell = "1"
jpeg-encoder = { version = "0.6", optional = true }
zune-jpeg = { version = "0.5", optional = true }
zune-core = { version = "0.5", optional = true }
crc32fast = "1"
flate2 = { version = "1", default-features = false, features = [
    "rust_backend",
] }
image = { version = "0.25", default-features = false, optional = true }
jxl-oxide = { version = "0.9", optional = true }

# Pure Rust
oxipng = { version = "10", optional = true }
png = { version = "0.18.0", optional = true }


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
