[package]
name = "imgoptim"
version = "0.1.0"
edition = "2021"

[features]
default = ["png", "jpeg"]
png = ["dep:oxipng", "dep:png"]
jpeg = ["dep:jpeg-encoder", "dep:zune-jpeg", "dep:zune-core"]
webp = ["dep:image"]

[dependencies]
anyhow = "1"
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
walkdir = "2"
path-clean = "1.0"
filetime = "0.2.27"
tempfile = "3.27.0"
bytesize = "2.3.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
glob = "0.3"
jpeg-encoder = { version = "0.7.0", features = ["simd"], optional = true }
zune-jpeg = { version = "0.5.15", optional = true }
zune-core = { version = "0.5.1", optional = true }
crc32fast = "1"
flate2 = { version = "1", default-features = false, features = [
    "rust_backend",
] }
image = { version = "0.25.10", default-features = false, features = ["webp"], optional = true }

# Pure Rust
oxipng = { version = "10.1.0", default-features = false, features = ["parallel", "zopfli"], optional = true }
png = { version = "0.18.1", optional = true }


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
